--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -8,11 +8,11 @@
                             <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
                                     <span class="title"><b>Inbox</b></span>
                             </li>
-                            <li   class="nav-item " >
-                                <a  class="nav-link ">
-                                    <span >ALL</span>
-                                </a>
-                            </li>
+                            <!--<li   class="nav-item " >-->
+                                <!--<a  class="nav-link ">-->
+                                    <!--<span >ALL</span>-->
+                                <!--</a>-->
+                            <!--</li>-->
                             <li ng-class="{ activateSettingNavBar: isActive('/messages')}" class="nav-item" id="pending">
                                 <a ui-sref="messages" class="nav-link ">
                                     <span class="title">Pending</span>
