--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -8,6 +8,7 @@
 
             <div class="row">
 
+<!--
                 <div class="col-md-12 ">
                     <div class="portlet light  border-rounded ">
                         <div class="portlet-title " style="border-bottom: 0px">
@@ -21,8 +22,8 @@
                                        data-toggle="dropdown">
                                         <i class="fa fa-filter"></i>
                                     </a>
-                                    <!--<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-                                        <i class="fa fa-map"></i> </a>-->
+                                    &lt;!&ndash;<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
+                                        <i class="fa fa-map"></i> </a>&ndash;&gt;
                                     <ul class="dropdown-menu pull-right">
                                         <li>
                                             <a href="javascript:;">
@@ -46,6 +47,7 @@
                         </div>
                     </div>
                 </div>
+-->
                 <div class="col-md-12">
                     <div ng-if="sent_all.length == 0" class="portlet light  border-rounded ">
                         <div class="alert alert-success">
