--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -103,7 +103,7 @@
 							<div class="col-md-12 notification-style uppercase">
 								<span ng-if="item.action == 'connect'">INTEREST RECEIVED</span>
 								<span ng-if="item.action == 'contact'">CONTACT VIEWED</span>
-								<span ng-if="item.action != 'connect' && item.action != 'contact'">Add {{item.field_name}} Request</span>
+								<span ng-if="item.action == 'field'">Add {{item.field_name}} Request</span>
 							</div>
 
 							<div class="col-md-12 notification-details">{{item.content}}</div>
@@ -116,7 +116,7 @@
 
 								</button>
 								&nbsp;
-								<button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
+								<button  type="button" ng-click="respondAction(item.com_id,'declined')" class=" uppercase btn btn-default input-rounded" ng-click="">
 									NOT INTERESTED
 								</button>
 
