--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -701,10 +701,10 @@
                             <hr>
                             <div class="form-group">
                                 <div class="pull-right">
-                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
+                                    <button type="button" class=" btn red input-rounded " ng-click="search('edit')">
                                         Search
                                     </button>
-                                    <button type="button" class=" btn red input-rounded " ng-click="search()">
+                                    <button type="button" class=" btn red input-rounded " ng-click="search('save')">
                                         Save & Search
                                     </button>
                                 </div>
