--- a/src/app/toolbar/managephoto/managephotoToolbar.html
+++ b/src/app/toolbar/managephoto/managephotoToolbar.html
@@ -52,7 +52,7 @@
                 <div class="page-top">
                     <div class="page-bar">
                         <spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">
-                            ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
+                            ACCOUNT TYPE:FREE | <span ><a ui-sref="payment" style="color: red">Upgrade</a></span></spans>
                     </div>
                     <!-- BEGIN HEADER SEARCH BOX -->
                     <!-- BEGIN TOP NAVIGATION MENU -->
