--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -31,9 +31,7 @@
                         </div>
                     </div>
                     <div  ng-if="showResult" class="portlet light  border-rounded ">
-                        <div class="alert alert-success">
-                            No results found
-                        </div>
+                        Sorry, we couldn't find any suitable matches, try different criteria - <a ui-sref="search">Modify</a>
                     </div>
                     <div style="color: red;text-align: center">{{message}}</div>
 
