--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -105,25 +105,37 @@
                             <div class="col-md-12 notification-details">{{item.content}}</div>
 
                         </div>
-                        <hr>
+                        <div class="row" ng-if="item.action == 'field'">
+                            <div class="col-md-12 notification-style uppercase">ADD {{item.field_name}} REQUEST SENT</div>
 
-                        <span ng-repeat="obj in item.communication.sent">
-                        <div class="row" >
-                            <div class="col-md-12 notification-style uppercase">REQUEST SENT</div>
-
-                            <div class="col-md-12 notification-details">{{obj.content}}</div>
+                            <div class="col-md-12 notification-details">{{item.content}}</div>
 
                         </div>
-                                                        <hr>
+                        <div class="row" ng-if="item.action == 'contact'">
+                            <div class="col-md-12 notification-style uppercase">CONTACT VIEWED</div>
 
-                            </span>
+                            <div class="col-md-12 notification-details">{{item.content}}</div>
+
+                        </div>
+                        <hr>
+
+                        <!--<span ng-repeat="obj in item.communication.sent">-->
+                        <!--<div class="row" >-->
+                            <!--<div class="col-md-12 notification-style uppercase">REQUEST SENT</div>-->
+
+                            <!--<div class="col-md-12 notification-details">{{obj.content}}</div>-->
+
+                        <!--</div>-->
+                                                        <!--<hr>-->
+
+                            <!--</span>-->
                         <div class="row margin-top-10">
                             <div class="col-md-12">
                                 <button type="button" class=" uppercase btn red input-rounded" ng-click="">
                                     Call Now
                                 </button>
                                 &nbsp;
-                                <button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
+                                <button  type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
                                     Send Interest
                                 </button>
 
