--- a/src/app/main/message/inbox/declined/messageDeclined.html
+++ b/src/app/main/message/inbox/declined/messageDeclined.html
@@ -107,7 +107,7 @@
 								<span ng-if="item.action == 'field'">{{item.field_name}} Request Declined</span>
 							</div>
 
-							<div class="col-md-12 notification-details">{{item.content}}</div>
+							<div class="col-md-12 notification-details">{{item.response}}</div>
 
 
 
