--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -105,9 +105,15 @@
                             <div class="col-md-12 notification-details">{{item.content}}</div>
 
                         </div>
+                        <div class="row" ng-if="item.action == 'field'">
+                            <div class="col-md-12 notification-style uppercase">ADD {{item.field_name}} REQUEST SENT</div>
+
+                            <div class="col-md-12 notification-details">{{item.content}}</div>
+
+                        </div>
                         <hr>
 
-                        <span ng-repeat="obj in item.communication.sent">
+                        <!--<span ng-repeat="obj in item.communication.sent">
                         <div class="row" >
                             <div class="col-md-12 notification-style uppercase">REQUEST SENT</div>
 
@@ -116,7 +122,7 @@
                         </div>
                                                         <hr>
 
-                            </span>
+                            </span>-->
                         <div class="row margin-top-10">
                             <div class="col-md-12">
                                 <button type="button" class=" uppercase btn red input-rounded" ng-click="">
